# QMind

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/qmind/config/: settings.py
src/qmind/data_management/: feature_engineer.py  ingestion.py  sources.py
src/qmind/strategy/: base_strategy.py  bollinger_bands_strategy.py  macd_crossover.py  n_period_breakout.py  nn_models.py  rl_agent_strategy.py  rsi_strategy.py  short_term_momentum.py  signals.py  sma_crossover.py  statistical_arbitrage.py
src/qmind/utils/: constants.py  helpers.py  logging_config.py
